package br.edu.ufrb.rascomp.model.Enum;

public enum Modalidade {
	SUMO,
	FOLLOW_LINE
}
