package br.edu.ufrb.rascomp.model.Enum;

public enum StatusBracket {
    RASCUNHO,
    GERADO,
    EM_ANDAMENTO,
    FINALIZADO,
    CANCELADO
}
