package br.edu.ufrb.rascomp.model.Enum;

public enum StatusCompetition {
    PLANEJADA,
    INSCRICOES_ABERTAS,
    INSCRICOES_ENCERRADAS,
    EM_ANDAMENTO,
    FINALIZADA,
    CANCELADA
}
