package br.edu.ufrb.rascomp.model.Enum;

public enum StatusMatch {
    AGUARDANDO_PARTICIPANTES,
    AGENDADA,
    EM_ANDAMENTO,
    FINALIZADA,
    CANCELADA,
    BYE
}
