package br.edu.ufrb.rascomp.model.Enum;

public enum StatusRegistration {
    PENDENTE,
    APROVADA,
    REJEITADA,
    CANCELADA,
    DESCLASSIFICADA
}
