package br.edu.ufrb.rascomp.model.Enum;

public enum StatusRoundSumo {
    FINALIZADO,
    EMPATADO,
    ANULADO,
    CANCELADO
}
